<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/our_team" />

            <LinearLayout
                android:id="@+id/our_team_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:background="#90e60b0b"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView2">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/titillium_web"
                    android:text="@string/our_team_title"
                    android:textColor="@color/text_white"
                    android:textSize="22sp"
                    android:paddingTop="15dp"
                    tools:layout_editor_absoluteX="333dp"
                    tools:layout_editor_absoluteY="211dp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/titillium_web"
                    android:text="@string/our_team_subtitle"
                    android:textColor="@color/text_white"
                    android:textSize="22sp"
                    android:paddingBottom="15dp"
                    tools:layout_editor_absoluteX="211dp"
                    tools:layout_editor_absoluteY="249dp" />
            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_width="110dp"
                android:layout_height="3dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:background="#e60b0b"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageView2" />

            <LinearLayout
                android:id="@+id/our_team_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintTop_toBottomOf="@id/view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/titillium_web"
                    android:textSize="20sp"
                    android:text="@string/our_team"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/our_team_description_one"
                    android:fontFamily="@font/titillium_web"
                    android:textSize="18sp"
                    android:justificationMode="inter_word"
                    android:layout_marginTop="8dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/our_team_description_two"
                    android:fontFamily="@font/titillium_web"
                    android:textSize="18sp"
                    android:justificationMode="inter_word"
                    android:layout_marginTop="16dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout_our_team_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="48dp"
                app:layout_constraintTop_toBottomOf="@id/our_team_description">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_email" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/titillium_web_bold"
                    android:text="@string/our_team_mail_title"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/titillium_web"
                    android:text="@string/our_team_mail"
                    android:textSize="19sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout_our_team_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="48dp"
                app:layout_constraintTop_toBottomOf="@id/LinearLayout_our_team_mail">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_phone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/titillium_web_bold"
                    android:text="@string/our_team_phone_title"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/titillium_web"
                    android:text="@string/our_team_phone_peru"
                    android:textSize="19sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/titillium_web"
                    android:text="@string/our_team_phone_argentina"
                    android:textSize="19sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout_our_team_clock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="48dp"
                android:paddingBottom="60dp"
                app:layout_constraintTop_toBottomOf="@id/LinearLayout_our_team_phone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_clock" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/titillium_web_bold"
                    android:text="@string/our_team_clock_title"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/titillium_web"
                    android:text="@string/our_team_clock"
                    android:textSize="19sp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>