<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearLayout_Results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:background="@color/background_white"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:fontFamily="@font/titillium_web"
                    android:gravity="center"
                    android:background="@color/background_black"
                    android:text="@string/converter_results"
                    android:textColor="@color/text_white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textview_units_from"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:fontFamily="@font/titillium_web"
                    android:gravity="center"
                    android:text="0"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textview_units_to"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:fontFamily="@font/titillium_web"
                    android:gravity="center"
                    android:text="0"
                    android:textSize="33sp"
                    android:textColor="@color/view_text_results"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="-10dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout_convert_units"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:background="#9800574B"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout_Results">


                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:fontFamily="@font/titillium_web"
                    android:gravity="center"
                    android:text="@string/converter_units"
                    android:textColor="@color/text_white"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/converter_units"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/edit_text_background"
                    android:fontFamily="@font/titillium_web"
                    android:hint="@string/converter_units_hint"
                    android:inputType="number"
                    android:paddingLeft="15sp"
                    android:paddingRight="15sp"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout_fuel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:background="#9800574B"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout_convert_units">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:fontFamily="@font/titillium_web"
                    android:gravity="center"
                    android:text="@string/converter_fuels_choose"
                    android:textColor="@color/text_white"
                    android:textSize="20sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/edit_text_background" >

                    <Spinner
                        android:id="@+id/spinner_fuel"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout_units"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/LinearLayout_fuel">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:fontFamily="@font/titillium_web"
                    android:gravity="center"
                    android:background="#9800574B"
                    android:text="@string/converter_units_choose"
                    android:textColor="@color/text_white"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/edit_text_background">

                    <Spinner
                        android:id="@+id/spinner_units_from"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp" />

                    <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#cdcdcf"
                        app:layout_constraintBottom_toTopOf="@+id/textView3"
                        app:layout_constraintStart_toStartOf="@+id/textView3" />

                    <Spinner
                        android:id="@+id/spinner_units_to"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/converter_button"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="48dp"
                android:background="@drawable/button_shape_disabled"
                android:fontFamily="@font/titillium_web"
                android:text="@string/converter_button_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/text_white"
                android:textSize="22sp"
                app:layout_constraintBottom_toTopOf="@+id/button_delete_data"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/LinearLayout_units" />

            <Button
                android:id="@+id/button_delete_data"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="48dp"
                android:background="@drawable/button_delete_shape"
                android:fontFamily="@font/titillium_web"
                android:text="@string/converter_button_delete"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/text_red"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/LinearLayout_units" />
        </LinearLayout>

    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>